# todo-flow

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: WIKI.md
scripts/: all-capture.ps1  batch-capture-v2.ps1  batch-capture.ps1  capture-pw.ps1  capture-screenshot.ps1  corrected-capture.ps1  dev.sh  fast-capture.ps1  final-capture.ps1  generate-icons.mjs  generate_icons.py  gentle-capture.ps1  seed-demo-data.mjs  self-check.ps1  self-check.sh
scripts/db-backups/: demo-db-20260610-235412.db  demo-db-20260610-235412.db-shm  demo-db-20260610-235412.db-wal  user-db-20260610-002835.db-shm  (+1 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  reminders.rs  shortcuts.rs
src-tauri/src/commands/: attachment_commands.rs  habit_commands.rs  list_commands.rs  mod.rs  reminder_commands.rs  settings_commands.rs  shortcut_commands.rs  stats_commands.rs  tag_commands.rs  task_commands.rs  widget_commands.rs
src-tauri/src/db/: attachment_repo.rs  connection.rs  habit_repo.rs  list_repo.rs  migrations.rs  mod.rs  reminder_repo.rs  tag_repo.rs  task_repo.rs
src-tauri/src/models/: attachment.rs  habit.rs  list.rs  mod.rs  settings.rs  tag.rs  task.rs  task_reminder.rs
src-tauri/tests/: ipc_integration.rs
(+126 files in other folders)
