[package]
name = "todo-flow"
version = "0.4.0"
edition = "2021"
description = "A modern Windows desktop TODO app with calendar views, subtasks, tags, habit tracking, and image attachments"
authors = ["TodoFlow"]
license = "MIT"
repository = "https://gitcode.com/CorN0r/todo-flow"
homepage = "https://gitcode.com/CorN0r/todo-flow"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
opt-level = 2

[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 8
opt-level = 1
debug = false
strip = "symbols"

[lib]
name = "todo_flow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
mime_guess = "2"
log = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
